--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	</div>
 	
 	<div class="w3-display-bottomright w3-padding-large" >
-	<font size="2" color="yellow"> Created by smitrpatel19@gnu.ac.in </font>
+	<font size="2" color="yellow"> Created by Smit Patel</font>
 	</div>
 
 
